--- a/app/styles/comp.scss
+++ b/app/styles/comp.scss
@@ -1,1 +1,5 @@
 @import 'components/TitleBar.scss';
+@import 'components/MainPage.scss';
+@import 'components/StatusPart.scss';
+@import 'components/ConfigPart.scss';
+@import 'components/AlertPage.scss';
