--- a/app/templates/alert.hbs
+++ b/app/templates/alert.hbs
@@ -1,2 +1,4 @@
-<div>Alert</div>
-{{outlet}}
+<div id="alert">
+  <TitleBar @isMain="false" @title="Emergency Syncope Alert"></TitleBar>
+  <AlertPage></AlertPage>
+</div>
