--- a/app/templates/components/alert-page.hbs
+++ b/app/templates/components/alert-page.hbs
@@ -1,1 +1,12 @@
-<div>Alert</div>
+<div id="alert-container">
+  <div id="alert-text" class="contents">
+    <h1>PIRL 316</h1>
+    <h3>Syncope Detected on <span class="variable-field normal-mode">08:44 AM (42 seconds ago)</span></h3>
+  </div>
+  <div id="alert-control">
+    <button class="uk-button uk-button-secondary" style="color: white;">Confirm</button>
+  </div>
+  <div id="alert-icon">
+    <img src="/images/siren.svg">
+  </div>
+</div>
