--- a/app/templates/components/main-page.hbs
+++ b/app/templates/components/main-page.hbs
@@ -1,4 +1,5 @@
-<div>Main</div>
-<StatusPart></StatusPart>
-<hr>
-<ConfigPart></ConfigPart>
+<main>
+  <StatusPart></StatusPart>
+  <hr>
+  <ConfigPart></ConfigPart>
+</main>
