--- a/app/styles/components/TitleBar.scss
+++ b/app/styles/components/TitleBar.scss
@@ -1,27 +1,30 @@
+@import '../common.scss';
+
 #title-bar {
   width: 100%;
-  height: 26px;
-  background-color: rgba(200, 200, 200, .1);
+  height: $tbHeig;
+  background-color: $emp1BgCara;
   box-shadow: 0 0 2px 1px rgba(55, 55, 55, .05);
   -webkit-app-region: drag;
   -webkit-user-select: none;
 
   .logo {
-    height: 22px;
+    height: $tbHeig - 4px;
     padding: 2px;
+    display: flex;
 
     span {
-      font-size: 14px;
-      line-height: 22px;
+      font-size: $tbHeig - 12px;
+      line-height: $tbHeig - 4px;
       vertical-align: top;
       margin-left: 5px;
       opacity: .715;
     }
 
     img {
-      width: 48px;
-      height: 12px;
-      margin: 5px 0 5px 3.5px;
+      width: auto;
+      height: $tbHeig - 10px;
+      margin: 3px 0 2px 3.5px;
       opacity: .715;
     }
   }
@@ -32,20 +35,20 @@
 
     button {
       display: table-cell;
-      height: 26px;
-      width: 36px;
+      height: $tbHeig;
+      width: $tbHeig / 26 * 36;
       margin: 0;
       padding: 0;
       background-color: transparent;
       border: none;
       outline: none;
       transition: background-color .2s ease;
-      background-size: 12px;
+      background-size: $tbHeig / 26 * 12;
       background-repeat: no-repeat;
       background-position: center;
 
       &:hover {
-        background-color: rgba(200, 200, 200, .2);
+        background-color: $emp2BgCara;
       }
 
       &#config {
