--- a/app/templates/components/config-part.hbs
+++ b/app/templates/components/config-part.hbs
@@ -1,1 +1,10 @@
-<div>ConfigPart</div>
+<div id="config" class="div-inline contents">
+  <h2>Configurations</h2>
+  <div>
+    <input class="uk-input" type="text" id="conf-site" placeholder="Server Address">
+    <input class="uk-input" type="password" id="conf-id" placeholder="Authentication ID">
+  </div>
+  <div>
+    <button class="uk-button uk-button-danger" onclick={{action "dispAlert"}}>Disconnect</button>
+  </div>
+</div>
