--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -1,2 +1,8 @@
-<TitleBar @isMain="true"></TitleBar>
-<MainPage></MainPage>
+<div id="main" class="window-container">
+  <TitleBar @isMain="true"></TitleBar>
+  <main id="main-container">
+    <StatusPanel></StatusPanel>
+    <hr>
+    <ConfigPanel></ConfigPanel>
+  </main>
+</div>
