--- a/app/templates/alert.hbs
+++ b/app/templates/alert.hbs
@@ -1,4 +1,15 @@
-<div id="alert">
+<div id="alert" class="window-container">
   <TitleBar @isMain="false" @title="Emergency Syncope Alert"></TitleBar>
-  <AlertPage></AlertPage>
+  <div id="alert-container" class="contents">
+    <div id="alert-text">
+      <h1 id="alert-location">PIRL 316</h1>
+      <h3>Syncope detected at <span id="alert-time" class="variable">14:51:32, today</span></h3>
+    </div>
+    <div id="alert-control">
+      <button class="uk-button uk-button-secondary white">Confirm</button>
+    </div>
+    <div id="alert-icon">
+      <img src="/images/siren.svg" alt="Emergency Siren Icon" />
+    </div>
+  </div>
 </div>
