--- a/app/templates/components/status-panel.hbs
+++ b/app/templates/components/status-panel.hbs
@@ -3,13 +3,13 @@
   <div id="status-fields">
     <h3>
       AP Location
-      <span id="status-location" class="variable table-like unemphasize">PIRL 316</span>
+      <span id="status-location" class="variable table-like unemphasize">Unknown</span>
     </h3>
     <h3>
       Syaa Centre
-      <span id="status-ip" class="variable table-like unemphasize">10.0.0.1</span>
+      <span id="status-ip" class="variable table-like unemphasize"></span>
       <span class="variable unemphasize">(</span>
-      <span id="status-host" class="variable unemphasize">syaa.widh.dev</span>
+      <span id="status-host" class="variable unemphasize">Unknown</span>
       <span class="variable unemphasize">)</span>
     </h3>
   </div>
