--- a/app/styles/components/ConfigPanel.scss
+++ b/app/styles/components/ConfigPanel.scss
@@ -1,10 +1,26 @@
 @import '../common.scss';
 
 #config-panel {
+  position: relative;
   height: $mainConfHeig + 2 * $mainHrMargVert;
 
   input[type="text"], input[type="password"] {
     font-family: 'Noto Sans Mono', monospace;
     font-size: .8rem;
+  }
+
+  #config-fields {
+    display: grid;
+    grid-gap: .5rem;
+
+    & > * {
+      grid-row: 1;
+    }
+  }
+
+  #config-spinner-container {
+    position: absolute;
+    top: $mainHrMargVert;
+    right: $mainPadHori;
   }
 }
