Changed to 15na

--- a/app/templates/components/title-bar.hbs
+++ b/app/templates/components/title-bar.hbs
@@ -3,7 +3,7 @@
     {{#if this.title}}
       <span>{{this.title}}</span>
     {{else}}
-      <img src="/images/logo.svg" alt="Syaa Logo">
+      <img src="/images/logo.svg" alt="15na Logo">
     {{/if}}
   </div>
   <div class="control right">
