--- a/app/templates/components/status-panel.hbs
+++ b/app/templates/components/status-panel.hbs
@@ -6,7 +6,7 @@
       <span id="status-location" class="variable table-like unemphasize">Unknown</span>
     </h3>
     <h3>
-      Syaa Centre
+      15na Centre
       <span id="status-ip" class="variable table-like unemphasize"></span>
       <span class="variable unemphasize">(</span>
       <span id="status-host" class="variable unemphasize">Unknown</span>
