Header, big header

--- a/src/frontend/components/Main/style.scss
+++ b/src/frontend/components/Main/style.scss
@@ -2,6 +2,11 @@ body {
   margin: 0;
 
   #client {
+    background-color: var(--back-color);
+    padding-top: 30px;
+    width: 100vw;
+    height: calc(100vh - 30px);
+
     &, * {
       color: var(--fore-color);
     }
