Great! Status & Alarm remained.

--- a/src/components/TitleBar/WindowButton/style.scss
+++ b/src/components/TitleBar/WindowButton/style.scss
@@ -4,5 +4,5 @@ button.window-button {
   height: 100%;
   padding: 0 16px;
   font-size: 10px;
-  transition: background-color .18s ease-in-out;
+  transition: background-color .18s ease-in-out, color .18s ease-in-out;
 }
