--- a/src/components/MainPage/RegisterForm/style.scss
+++ b/src/components/MainPage/RegisterForm/style.scss
@@ -2,7 +2,7 @@
   &-form {
     position: relative;
     max-width: 480px;
-    transition: padding .6s ease-out, opacity 1s ease-in-out;
+    transition: padding .35s ease-out, opacity .5s ease-in-out;
   }
 
   &-title {
