--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -20,6 +20,7 @@ body {
   &, * {
     --fore-color: #fff;
     --back-color: #2b2b2b;
+    --prim-color: #80c1f2;
   }
 }
 
@@ -27,5 +28,6 @@ body {
   &, * {
     --fore-color: #2b2b2b;
     --back-color: #fff;
+    --prim-color: #31a9c4;
   }
 }
