--- a/src/components/TitleBar/WindowButton/style.scss
+++ b/src/components/TitleBar/WindowButton/style.scss
@@ -1,3 +1,6 @@
+/* IRONA Client Program is subject to the terms of the Mozilla Public License 2.0.
+ * You can obtain a copy of MPL at LICENSE.md of root directory. */z
+
 button.window-button {
   outline: none;
   border: none;
