--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -1,3 +1,6 @@
+/* IRONA Client Program is subject to the terms of the Mozilla Public License 2.0.
+ * You can obtain a copy of MPL at LICENSE.md of root directory. */
+
 body {
   margin: 0;
   position: relative;
