--- a/src/components/TitleBar/WindowButton/style.scss
+++ b/src/components/TitleBar/WindowButton/style.scss
@@ -1,5 +1,5 @@
 /* IRONA Client Program is subject to the terms of the Mozilla Public License 2.0.
- * You can obtain a copy of MPL at LICENSE.md of root directory. */z
+ * You can obtain a copy of MPL at LICENSE.md of root directory. */
 
 button.window-button {
   outline: none;
